# LeetKernel

./: .clang-format  000.base.cu  001.vector_addition.cu  002.matrix_transpose.cu  003.cutlass.cu  003.liuxiaodong.v0.cu  003.liuxiaodong.v1.cu  003.matrix_multiplication.cu  003.matrix_multiplication.opt.cu  CMakeLists.txt  build.sh  ncu.sh
examples/: 000.query_cuda_config.cu  000.test.cu  002.matrix_transpose.cu  003.matrix_multiplication.cu  004.fp16.cublas.cu  004.fp16.mm.cu  004.fp16.mm.ldmatrix.cu  004.fp16.mm.ldmatrix.inner_split.cu  004.fp16.mm.ldmatrix.notrans.cu  004.fp16.mm.ldmatrix.test.cu  004.fp16.mm.ldmatrix.trans.cu  CMakeLists.txt
llmmm/: CMakeLists.txt  llmmm.cc  llmmm.cuh  llmmm.h  mm_config.h
llmmm/llmmm_gen_cuda_files/: CMakeLists.txt  llmmm_m_064.cu  llmmm_m_128.cu  llmmm_unaligned_m_001.cu  llmmm_unaligned_m_002.cu  llmmm_unaligned_m_003.cu  llmmm_unaligned_m_004.cu  llmmm_unaligned_m_005.cu  llmmm_unaligned_m_006.cu  llmmm_unaligned_m_007.cu  llmmm_unaligned_m_008.cu  llmmm_unaligned_m_009.cu  llmmm_unaligned_m_010.cu  llmmm_unaligned_m_011.cu  llmmm_unaligned_m_012.cu  llmmm_unaligned_m_013.cu  llmmm_unaligned_m_014.cu  llmmm_unaligned_m_015.cu  llmmm_unaligned_m_016.cu  llmmm_unaligned_m_017.cu  llmmm_unaligned_m_018.cu  llmmm_unaligned_m_019.cu  llmmm_unaligned_m_020.cu  llmmm_unaligned_m_021.cu  llmmm_unaligned_m_022.cu  llmmm_unaligned_m_023.cu  llmmm_unaligned_m_024.cu  llmmm_unaligned_m_025.cu  llmmm_unaligned_m_026.cu  llmmm_unaligned_m_027.cu  llmmm_unaligned_m_028.cu  llmmm_unaligned_m_029.cu  llmmm_unaligned_m_030.cu  llmmm_unaligned_m_031.cu  llmmm_unaligned_m_032.cu  llmmm_unaligned_m_033.cu  llmmm_unaligned_m_034.cu  llmmm_unaligned_m_035.cu  llmmm_unaligned_m_036.cu  llmmm_unaligned_m_037.cu  (+89 more)
llmmm/tool/: gen_add_mm.py  gen_unaligned_m_cuda_file.py
test/: CMakeLists.txt  kahan.cu  kahan.h  test.cc  test_cublas.cc  test_cublas_2.cc  test_tune.cc  test_verify.cc
util/: error.h  fp16.mm.cuh  util.cuh  util.h
